--- a/index.html
+++ b/index.html
@@ -46,17 +46,12 @@
     <nav class="nav-menu">
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-        <li><a href="#portfolio"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services"><i class="bx bx-server"></i> <span>Services</span></a></li>
-        <li><a href="#contact"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
-        <li><a href="http://github.com/bagusfe"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
+		<li><a href="http://github.com/bagusfe"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
         <li><a href="#"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
-        <li><a href="https://bagusfe.id/blog"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
-        <li><a href="https://toko.bagusfe.id"><i class="bx bx-store"></i> <span>My Store</span></a></li>
-        <li><a href="https://saweria.co/bagusfe"><i class="bx bx-money"></i> <span>Donate</span></a></li>
-      </ul>
+		<li><a href="https://bagusfe.id/blog"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
+		<li><a href="https://toko.bagusfe.id"><i class="bx bx-store"></i> <span>My Store</span></a></li>
+		<li><a href="https://saweria.co/bagusfe"><i class="bx bx-money"></i> <span>Donate</span></a></li>
+  		</ul>
     </nav><!-- .nav-menu -->
 
   </header><!-- End Header -->
@@ -93,8 +88,7 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3>Electronic Engineer &amp; Mobile Developer.</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Saya memiliki beberapa pengalaman kerja sebagai Technical Support di Perusahaan Filter Air dan Supervisor Produksi di Manufaktur. Saat ini sedang mencari peluang pekerjaan di bidang IT sebagai programmer Web, React Native atau iOS Developer. Hire me! ^^
             </p>
             <div class="row">
               <div class="col-lg-6">
