--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Fakultas Teknik Elektronika &amp; Komputer</h4>
+              <h4>Fakultas Teknik Elektronika &amp; Komputer (FTEK)</h4>
               <h5>2013 - 2018</h5>
               <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
               <ul>
@@ -284,7 +284,39 @@
               <p><em>Tabalong, South Borneo, ID</em></p>
               <p>Saya mengambil jurusan Ilmu Pengetahuan Alam.</p>
             </div>
+            <h3 class="resume-title">Organization Experiences</h3>
+            <div class="resume-item">
+              <h4>Badan Perwakilan Mahasiswa FTEK</h4>
+              <h5>2013 - 2018</h5>
+              <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <ul>
+                <li>IPK : 2.89</li>
+                <li>Major: Instrumentasi</li>
+              </ul>
+              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
+            </div>
+            <div class="resume-item">
+              <h4>Badan Perwakilan Mahasiswa FTEK</h4>
+              <h5>2013 - 2018</h5>
+              <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <ul>
+                <li>IPK : 2.89</li>
+                <li>Major: Instrumentasi</li>
+              </ul>
+              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
+            </div>
+            <div class="resume-item">
+              <h4>Badan Perwakilan Mahasiswa FTEK</h4>
+              <h5>2013 - 2018</h5>
+              <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <ul>
+                <li>IPK : 2.89</li>
+                <li>Major: Instrumentasi</li>
+              </ul>
+              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
+            </div>
           </div>
+          
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
@@ -359,21 +391,21 @@
                 <h4>Juara 1 Lomba Karya Tulis Ilmiah Group</h4>
                 <p>Pernah mendapatkan award memenangkan lomba karya tulis ilmiah group. Dengan judul.....</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>Juara 3 Lomba Karya Tulis Ilmiah Individu</h4>
+                <p>Mengikuti lomba Karya Tulis Ilmiah tingkat Universitas dan mendapatkan juara 3.</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -384,10 +416,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
+                <h4>Trainer </h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -401,7 +433,7 @@
                 <h4>Card 2</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -415,7 +447,7 @@
                 <h4>Web 2</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -429,7 +461,7 @@
                 <h4>App 3</h4>
                 <p>App</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -443,7 +475,7 @@
                 <h4>Card 1</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -457,7 +489,7 @@
                 <h4>Card 3</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -471,7 +503,7 @@
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
