--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@
             </div>
             <h3 class="resume-title">Organization Experiences</h3>
             <div class="resume-item">
-              <h4>Badan Perwakilan Mahasiswa FTEK</h4>
-              <h5>2013 - 2018</h5>
-              <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <h4>Linnaaw Student Center</h4>
+              <h5>Jan 2017 - Dec 2017</h5>
+              <p><em>Salatiga, Central Java, ID</em></p>
               <ul>
                 <li>IPK : 2.89</li>
                 <li>Major: Instrumentasi</li>
