--- a/index.html
+++ b/index.html
@@ -315,6 +315,37 @@
 
       </div>
     </section><!-- End Skills Section -->
+
+    <!-- ======= Facts Section ======= -->
+    <section id="facts" class="facts">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Languages</h2>
+          <p>I can speak in two language with range 1 - 100 %</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="count-box">
+              <i class="icofont-simple-smile"></i>
+              <span data-toggle="counter-up">100</span>
+              <p>Bahasa Indonesia</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+            <div class="count-box">
+              <i class="icofont-document-folder"></i>
+              <span data-toggle="counter-up">80</span>
+              <p>English</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Facts Section -->
     
     
         <!-- ======= Portfolio Section ======= -->
