--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           <p>I can speak in two language with range 1 - 100 %</p>
         </div>
 
-        <div class="row">
+        <div class="row" style="width:600px; margin:0 auto;">
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
@@ -340,6 +340,21 @@
               <i class="icofont-document-folder"></i>
               <span data-toggle="counter-up">80</span>
               <p>English</p>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="count-box">
+              <i class="icofont-simple-smile"></i>
+              <span data-toggle="counter-up">100</span>
+              <p>Banjar</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+            <div class="count-box">
+              <i class="icofont-document-folder"></i>
+              <span data-toggle="counter-up">80</span>
+              <p>Jawa</p>
             </div>
           </div>
         </div>
