--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Role		:</strong> Engineer</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Passion		:</strong> Mobile Development, React Nativ</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Hobby		:</strong> Swimming, Travel, Hangout</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City		:</strong> West Jakarta, ID</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Name		:</strong> Bagus Frayoga E, S.T</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Gender		:</strong> Male</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Height		:</strong> 162 cm</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Weight		:</strong> 60 kg</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>College			:</strong> Satya Wacana Christian University</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree		:</strong> Electronic Engineer</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Marital			:</strong> Single</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Nationality		:</strong> Indonesian</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> goodfe@yahoo.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website 	:</strong> <a href="https://bagusfe.id/blog">bagusfe.id</a></li>
                 </ul>
@@ -130,7 +130,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title bx bx-book"> Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Bagus Frayoga Effendi, S.T</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
@@ -141,7 +141,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title bx-school">Education</h3>
             <div class="resume-item">
               <h4>Fakultas Teknik Elektronika &amp; Komputer (FTEK)</h4>
               <h5>2013 - 2018</h5>
@@ -158,7 +158,7 @@
               <p><em>Tabalong, South Borneo, ID</em></p>
               <p>Saya mengambil jurusan Ilmu Pengetahuan Alam.</p>
             </div>
-            <h3 class="resume-title">Organization Experiences</h3>
+            <h3 class="resume-title bxs-group">Organization Experiences</h3>
             <div class="resume-item">
               <h4>Linnaaw Student Center</h4>
               <h5>Jan 2017 - Dec 2017</h5>
@@ -192,7 +192,7 @@
           </div>
           
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title bx-building">Professional Experience</h3>
             <div class="resume-item">
               <h4>Technical Support</h4>
               <h5>Nov 2019 - Jun 2020</h5>
