--- a/index.html
+++ b/index.html
@@ -163,31 +163,32 @@
               <h4>Linnaaw Student Center</h4>
               <h5>Jan 2017 - Dec 2017</h5>
               <p><em>Salatiga, Central Java, ID</em></p>
-              <ul>
-                <li>IPK : 2.89</li>
-                <li>Major: Instrumentasi</li>
-              </ul>
-              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
+              <p>Sebuah wadah bagi mahasiswa UKSW untuk mengembangkan diri. Banyak sekali kegiatan yang bermanfaat yang saya ikuti, seperti; mengikuti bakti sosial, pelayanan ke desa di sekitar Semarang-Salatiga, perayaan natal bersama di panti asuhan, culture celebration, dan masih banyak lagi.</p>
             </div>
             <div class="resume-item">
               <h4>Badan Perwakilan Mahasiswa FTEK</h4>
-              <h5>2013 - 2018</h5>
+              <h5>2014 - 2015</h5>
+              <p><em>Ketua Komisi A (Program Kerja)</em></p>
               <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <p>Saya dipercaya untuk menjabat sebagai Ketua Komisi A Program Kerja yang selanjutnya bertanggung jawab untuk : </p>
               <ul>
-                <li>IPK : 2.89</li>
-                <li>Major: Instrumentasi</li>
+                <li>Membentuk team observasi (TO) pada setiap kegiatan kemahasiswaan dan memberikan kuisioner terhadap kegiatan yang sedang atau sudah berlangsung untuk menjadi bahan evaluasi di periode selanjutnya.</li>
+                <li>Memonitoring dan mengontrol setiap proposal yang masuk untuk diperiksa apakah memenuhi standar kegiatan tahunan.</li>
+                <li>Menyusun rancangan Garis Besar Haluan Lembaga Kemahasiswaan Fakultas Teknik Elektronika dan Komputer dengan berdasarkan aspirasi mahasiswa dan kebutuhan mahasiswa</li>
               </ul>
-              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
+              
             </div>
             <div class="resume-item">
               <h4>Badan Perwakilan Mahasiswa FTEK</h4>
-              <h5>2013 - 2018</h5>
+              <h5>2013 - 2014</h5>
+              <p><em>Anggota Komisi A (Program Kerja)</em></p>
               <p><em>Universitas Kristen Satya Wacana, Salatiga, Central Java, ID</em></p>
+              <p>Saya dipercaya untuk menjabat sebagai Anggota Komisi A Program Kerja yang selanjutnya bertanggung jawab untuk : </p>
               <ul>
-                <li>IPK : 2.89</li>
-                <li>Major: Instrumentasi</li>
+                <li>Melaksanakan team observasi (TO) pada setiap kegiatan kemahasiswaan dan memberikan kuisioner terhadap kegiatan yang sedang atau sudah berlangsung untuk menjadi bahan evaluasi di periode selanjutnya.</li>
+                <li>Memonitoring dan mengontrol setiap proposal yang masuk untuk diperiksa apakah memenuhi standar kegiatan tahunan.</li>
+                <li>Bersama anggota merancang Garis Besar Haluan Lembaga Kemahasiswaan Fakultas Teknik Elektronika dan Komputer dengan berdasarkan aspirasi mahasiswa dan kebutuhan mahasiswa</li>
               </ul>
-              <p>Judul Tesis: "Perancangan Alat Kentongan Elektronik Menggunakan Mikrokontroler NodeMCU berbasis Internet of Things (IoT).</p>
             </div>
           </div>
           
@@ -322,7 +323,7 @@
 
         <div class="section-title">
           <h2>Languages</h2>
-          <p>I can speak in two language with range 1 - 100 %</p>
+          <p>I can speak in many language with range 1 - 100 %</p>
         </div>
 
         <div class="row" style="width:600px; margin:0 auto;">
