--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
     <nav class="nav-menu">
       <ul>
         <li class="active"><a href="#hero"><i class="bx bx-home"></i> <span>Home</span></a></li>
-		<li><a href="http://github.com/bagusfe"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
-        <li><a href="https://drive.google.com/file/d/1J6ySlxpKvAmYqiy3s5xYXmwt8qB-j7UR/view?usp=sharing"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
-		<li><a href="https://bagusfe.id/blog"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
-		<li><a href="https://toko.bagusfe.id"><i class="bx bx-store"></i> <span>My Store</span></a></li>
-		<li><a href="https://saweria.co/bagusfe"><i class="bx bx-money"></i> <span>Donate</span></a></li>
+		<li><a href="http://github.com/bagusfe" target="_blank"><i class="bx bxl-github"></i> <span>GitHub</span></a></li>
+        <li><a href="https://drive.google.com/file/d/1J6ySlxpKvAmYqiy3s5xYXmwt8qB-j7UR/view?usp=sharing" target="_blank"><i class="bx bx-cloud-download"></i> <span>Download CV</span></a></li>
+		<li><a href="https://bagusfe.id/blog" target="_blank"><i class="bx bx-book"></i> <span>Read Blog</span></a></li>
+		<li><a href="https://toko.bagusfe.id" target="_blank"><i class="bx bx-store"></i> <span>My Store</span></a></li>
+		<li><a href="https://saweria.co/bagusfe" target="_blank"><i class="bx bx-money"></i> <span>Donate</span></a></li>
   		</ul>
     </nav><!-- .nav-menu -->
 
