--- a/index.html
+++ b/index.html
@@ -200,11 +200,11 @@
               <p><em>PT Lautan Solusi Airindo</em></p>
               <p><em>(Watercare part of Lautan Luas Group)</em></p>
               <p><em>Kebayoran Lama, South Jakarta, ID </em></p>
+              <p>Bekerja sebagai Teknisi untuk perusahaan retail yang bergerak di bidang Water Treatment. Banyak pengalaman yang saya dapat selama bekerja di perusahaan ini.</p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Melakukan instalasi pemasangan alat berupa tabung filter air dan alat Reverse Osmosis untuk air layak minum dengan pengujian Laboratory.</li>
+                <li>Melakukan survey lapangan ke rumah Customer yang akan dilakukan pemasangan filter air.</li>
+                <li>Membuat design filter dalam bentuk gambar untuk water treatment dirumah customer menggunakan draw.io.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -213,10 +213,13 @@
               <p><em>PT Pitamas Indonusa (Nachi Tape)</em></p>
               <p><em>Sidoarjo, East Java, ID</em></p>
               <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+                <li>Bertanggung jawab dalam jalannya proses produksi pita perekat.</li>
+                <li>Memonitor kinerja operator dalam bekerja dan memastikan produksi berjalan dengan baik.</li>
+                <li>Memastikan bahan untuk proses produksi sudah dipersiapkan dengan baik.</li>
+                <li>Bekerjsama dengan bagian warehouse untuk mempersiapkan barang yang akan di export ke luar negeri. </li>
+                <li>Melakukan troubleshooting jika mesin produksi bermasalah.</li>
+                <li>Mengkoordinasikan jika mesin produksi bermasalah ke bagian Maintenance.</li>
+                <li>Mengecek dan melaporkan hasil dari produksi ke bagian Quality Check.</li>
               </ul>
             </div>
             <div class="resume-item">
@@ -224,12 +227,7 @@
               <h5>Aug 2018 - Oct 2018</h5>
               <p><em>PT Karunia Prima Engineering</em></p>
               <p><em>Surabaya, East Java, ID</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <p>Diberikan kesempatan untuk mengikuti magang diperusahaan Automation Machine. Saya banyak belajar tentang beberapa perangkat seperti PLC Omron, Inverter, Motor, dan berbagai macam sensor (thickness, distance, object detection).</p>
             </div>
           </div>
         </div>
