--- a/index.html
+++ b/index.html
@@ -109,8 +109,7 @@
               </div>
             </div>
             <p>
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+              ...
             </p>
           </div>
         </div>
@@ -133,7 +132,7 @@
             <h3 class="resume-title bx bx-book">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Bagus Frayoga Effendi, S.T</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+              <p><em>I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things.</em></p>
               <ul>
                 <li>Banjarmasin - Jakarta, ID</li>
                 <li>(0812) 5051-0066</li>
@@ -220,6 +219,7 @@
               <h5>Mar 2019 - Jul 2019</h5>
               <p><em>PT Pitamas Indonusa (Nachi Tape)</em></p>
               <p><em>Sidoarjo, East Java, ID</em></p>
+              <p>Bekerja di Manufacturing memberikan saya banyak pengalaman sebagai Supervisor Produksi baik dari management people dan diri saya sendiri. Bekerja disini saya banyak arahan dan bimbingan oleh senior Supervisor Produksi. Saya berhadap dan berdoa perusahaan dapat berkembang lebih baik lagi kedepannya.</p>
               <ul>
                 <li>Bertanggung jawab dalam jalannya proses produksi pita perekat.</li>
                 <li>Memonitor kinerja operator dalam bekerja dan memastikan produksi berjalan dengan baik.</li>
@@ -376,7 +376,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here a bit about my portfolio. </p>
         </div>
 
         <div class="row">
