--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="icofont-simple-smile"></i>
+              <i class="icofont-unique-idea"></i>
               <span data-toggle="counter-up">100</span>
               <p>Bahasa Indonesia</p>
             </div>
@@ -344,14 +344,14 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="icofont-document-folder"></i>
+              <i class="icofont-like"></i>
               <span data-toggle="counter-up">80</span>
               <p>English</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <i class="icofont-simple-smile"></i>
+              <i class="icofont-qoute-left"></i>
               <span data-toggle="counter-up">100</span>
               <p>Banjar</p>
             </div>
@@ -359,7 +359,7 @@
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
-              <i class="icofont-document-folder"></i>
+              <i class="icofont-qoute-right"></i>
               <span data-toggle="counter-up">80</span>
               <p>Jawa</p>
             </div>
