--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title bx bx-book">Sumary</h3>
+            <h3 class="resume-title icofont-papers"> Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Bagus Frayoga Effendi, S.T</h4>
               <p><em>I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things.</em></p>
@@ -140,7 +140,7 @@
               </ul>
             </div>
 
-            <h3 class="resume-title bx-school">Education</h3>
+            <h3 class="resume-title icofont-light-bulb">Education</h3>
             <div class="resume-item">
               <h4>Fakultas Teknik Elektronika &amp; Komputer (FTEK)</h4>
               <h5>2013 - 2018</h5>
@@ -165,7 +165,7 @@
               <p><em>Tabalong, South Borneo, ID</em></p>
               <p>Saya mengambil jurusan Ilmu Pengetahuan Alam.</p>
             </div>
-            <h3 class="resume-title">Organization Experiences</h3>
+            <h3 class="resume-title icofont-id"> Organization Experiences</h3>
             <div class="resume-item">
               <h4>Linnaaw Student Center</h4>
               <h5>Jan 2017 - Dec 2017</h5>
@@ -200,7 +200,7 @@
           </div>
           
           <div class="col-lg-6">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title icofont-library"> Professional Experience</h3>
             <div class="resume-item">
               <h4>Technical Support</h4>
               <h5>Nov 2019 - Jun 2020</h5>
