--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1><b>Bagus</b>Dev  </h1>
-      <p>I'm <span class="typed" data-typed-items="Engineer, Developer, Good Talent!"></span></p>
+      <p>I'm <span class="typed" data-typed-items="an Engineer, a Mobile Developer, a Good Talent!"></span></p>
       <div class="social-links">
         <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
