--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>BagusDev |  Enthusiast</title>
+  <title>BagusDev | an Online Resume</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -78,7 +78,7 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p><b>Hi there</b>, this is a little bit about me. I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic.</p>
+          <p><b>Hi there</b>, my name is Bagus Frayoga Effendi, an Electronic Engineer also a Mobile Developer based on Jakarta. I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things. My weakness is speak in front of people because sometimes I feel not confident or people around me will judge me but I keep on trying to handle this by making a video blog and posted it on my youtube channel also expand my knowledge so I could be more confident to speak about a particular topic.</p>
         </div>
 
         <div class="row">
@@ -101,9 +101,9 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Marital			:</strong> Single</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Married Status			:</strong> Single</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Nationality		:</strong> Indonesian</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> goodfe@yahoo.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> <a href="mailto:goodfe@yahoo.com">goodfe@yahoo.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website 	:</strong> <a href="https://bagusfe.id/blog">bagusfe.id</a></li>
                 </ul>
               </div>
@@ -124,12 +124,12 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>This is my career journey when I was graduated from college. And also a few information about me. </p>
+          <p>My career journey started on Aug 2018 when I was graduated from college in Salatiga and then I moved to Surabaya and working as an Internship Engineer for Automation Machine (learn a lot like; PLC, Inverter, Motor, Sensor) after finished my intern I move to work in a manufacture company as a Supervisor Production based on Surabaya. My latest work experience, I work as a Technical Support based on Jakarta on 2019.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title icofont-papers"> Sumary</h3>
+            <h3 class="resume-title icofont-papers"> Summary</h3>
             <div class="resume-item pb-0">
               <h4>Bagus Frayoga Effendi, S.T</h4>
               <p><em>I am a humble, responsible, tidy, organize, hard worker also a team player that seeking for excellence and love to know new things.</em></p>
@@ -163,14 +163,14 @@
               <h4>SMA Negeri 1 Muara Uya</h4>
               <h5>2010 - 2013</h5>
               <p><em>Tabalong, South Borneo, ID</em></p>
-              <p>Saya mengambil jurusan Ilmu Pengetahuan Alam.</p>
+              <p>This is a government school with 'A' accreditation and one of the best school in Tabalong. I finished my study for 3 years and majoring in Science. </p>
             </div>
             <h3 class="resume-title icofont-id">Organization Experiences</h3>
             <div class="resume-item">
-              <h4>Linnaaw Student Center</h4>
+              <h4>Linnaaw Student Center (LSC)</h4>
               <h5>Jan 2017 - Dec 2017</h5>
               <p><em>Salatiga, Central Java, ID</em></p>
-              <p>Sebuah wadah bagi mahasiswa UKSW untuk mengembangkan diri. Banyak sekali kegiatan yang bermanfaat yang saya ikuti, seperti; mengikuti bakti sosial, pelayanan ke desa di sekitar Semarang-Salatiga, perayaan natal bersama di panti asuhan, culture celebration, dan masih banyak lagi.</p>
+              <p>A homey and cozy place to gather with another students who study in Salatiga (UKSW). I used to develop my skill and interest also networking because I can met many friends from another faculty. This place also facilitate student such as Accoustic Night, Health Service for elder in village around Salatiga, life group sharing, worshiping, christmas celebration, culture celebration with international friend (or tourist), practice English Conversation and many more good activities. This community was mentoring by Angeles Family and I was so grateful because his family such as my second family here.</p>
             </div>
             <div class="resume-item">
               <h4>Badan Perwakilan Mahasiswa FTEK</h4>
@@ -250,7 +250,7 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>This is my percentage of my skill. If you confused or something else you can ask me for the documentation of project that I work on.</p>
+          <p>I have some skills to support my professional work. I love to learn a new thing or learn more deeper an existing skills to enrich my knowledge so that I can keep improve with the dynamic progress of IT world. </p>
         </div>
 
         <div class="row skills-content">
@@ -330,15 +330,15 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Here a bit about my portfolio. </p>
+          <p>Some achievement (award) and project that I've worked on.</p>
         </div>
 
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Award</li>
-              <li data-filter=".filter-card">Campus</li>
+              <li data-filter=".filter-app">Awards</li>
+              <li data-filter=".filter-card">Campuss</li>
               <li data-filter=".filter-web">Certified</li>
             </ul>
           </div>
@@ -350,8 +350,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Juara 1 Lomba Karya Tulis Ilmiah Group</h4>
-                <p>Pernah mendapatkan award memenangkan lomba karya tulis ilmiah group. Dengan judul.....</p>
+                <h4>Juara 1 Lomba Karya Tulis Ilmiah</h4>
+                <p>Pernah mendapatkan award memenangkan lomba karya tulis ilmiah group tingkat Universitas.</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -378,8 +378,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Trainer </h4>
-                <p>App</p>
+                <h4>Freelance Trainer at Arkademy.com </h4>
+                <p>as a Trainer: Teaching Internet of Things (IoT). </p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -392,8 +392,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Campuss Promotion Team</h4>
+                <p>Promoting my university to student around high school in Central Java</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -406,8 +406,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
-                <p>Web</p>
+                <h4>Christmast Commitee Campus</h4>
+                <p>an annual christmas celebration</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                   <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
