--- a/index.html
+++ b/index.html
@@ -97,12 +97,14 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Gender		:</strong> Male</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Height		:</strong> 162 cm</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Weight		:</strong> 60 kg</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Married Status			:</strong> Single</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Nationality		:</strong> Indonesian</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Married Status			:</strong> Single</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Nationality		:</strong> Indonesian</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Drive License		:</strong> C (motorbike)</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Languages	:</strong>Bahasa Indonesia, English</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail		:</strong> <a href="mailto:goodfe@yahoo.com">goodfe@yahoo.com</a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website 	:</strong> <a href="https://bagusfe.id/blog">bagusfe.id</a></li>
                 </ul>
