update cv resume

--- a/index.html
+++ b/index.html
@@ -56,10 +56,9 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero" class="d-flex flex-column justify-content-center">
         <div class="container" data-aos="zoom-in" data-aos-delay="100">
-            <p>
-                My name is
+            <p>My name is
             </p>
-            <h2>Bagus Frayoga Effendi</h2>
+            <h1>Bagus Frayoga E</h1>
             <p>I'm <span class="typed" data-typed-items="an Engineer, a Mobile Developer, a Good Talent!"></span></p>
             <div class="social-links">
                 <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
