Update foto profile and certificate

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Bagus Frayoga Effendi | an Online Resume</title>
-    <meta content="" name="descriptison">
-    <meta content="" name="keywords">
+    <meta content="" name="an resume online by Bagus Frayoga Effendi. ">
+    <meta content="" name="resume, cv, online, Bagus Frayoga Effendi, Tech, IT, Developer, Mobile, React Native, Flutter">
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon">
@@ -437,6 +437,20 @@
                                 <p>Mengikuti pelatihan online tentang Google My Business untuk buka usaha.</p>
                                 <div class="portfolio-links">
                                     <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
+                                    <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+                        <div class="portfolio-wrap">
+                            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+                            <div class="portfolio-info">
+                                <h4>Dicoding.com | Object-Oriented Programming </h4>
+                                <p>Mengikuti kursus online tentang Belajar Prinsip Pemrograman S.O.L.I.D. </p>
+                                <div class="portfolio-links">
+                                    <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="View Photo"><i class="bx bx-plus"></i></a>
                                     <a href="portfolio-details.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Portfolio Details"><i class="bx bx-link"></i></a>
                                 </div>
                             </div>
