--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <p>I'm <span class="typed" data-typed-items="an Engineer, a Mobile Developer, a Good Talent!"></span></p>
             <div class="social-links">
                 <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
                 <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <a href="http://medium.com/@bagusfe" class="medium"><i class="bx bxl-medium-square"></i></a>
             </div>
         </div>
     </section>
@@ -472,11 +472,8 @@
             <h3>Bagus Frayoga Effendi, S.T</h3>
             <p>Aku hendak bersyukur kepada-Mu selama-lamanya, sebab Engkaulah yang bertindak; karena nama-Mu baik, aku hendak memasyhurkannya di depan orang-orang yang Kaukasihi! ~ Mazmur 52:9</p>
             <div class="social-links">
-                <a href="http://instagram.com/bagusfe.id" class="instagram"><i class="bx bxl-instagram"></i></a>
                 <a href="http://twitter.com/bagusfedotid" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="http://facebook.com/bagusfe.id" class="facebook"><i class="bx bxl-facebook"></i></a>
                 <a href="http://yt.bagusfe.id" class="youtube"><i class="bx bxl-youtube"></i></a>
-                <a href="http://snapchat.com/add/gewdfe" class="snapchat"><i class="bx bxl-snapchat"></i></a>
                 <a href="http://linkedin.com/in/bagusfedotid" class="linkedin"><i class="bx bxl-linkedin"></i></a>
                 <a href="http://wa.me/+6281250510066" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
             </div>
